Fix prose for dark mode

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -45,30 +45,3 @@ html {
   scroll-padding-top: 8rem; /* height of sticky header */
   scroll-behavior: smooth !important;
 }
-
-.public-DraftEditorPlaceholder-root {
-  background-color: inherit !important;
-}
-
-.skeleton-loader:empty {
-  width: 100%;
-  height: 15px;
-  display: block;
-  background: linear-gradient(
-      to right,
-      rgba(255, 255, 255, 0),
-      rgba(255, 255, 255, 0.5) 50%,
-      rgba(255, 255, 255, 0) 80%
-    ),
-    lightgray;
-  background-repeat: repeat-y;
-  background-size: 50px 500px;
-  background-position: 0 0;
-  animation: shine 1s infinite;
-}
-
-@keyframes shine {
-  to {
-    background-position: 100% 0;
-  }
-}
